--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,18 +1,28 @@
-<!--
-  Generated template for the LoginPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>login</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Login</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
+  <ion-item>
+    <ion-label>Email Address:</ion-label>
+    <ion-input type="text" [(ngModel)]="user.email"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Password:</ion-label>
+    <ion-input type="password" [(ngModel)]="user.password"></ion-input>
+  </ion-item>
+
+  <ion-row>
+    <ion-col text-center>
+      <button ion-button (click)="login()" small>Login</button>
+      <button ion-button (click)="register()" small>Register</button>
+      <button ion-button icon-only (click)="facebookLogin()" float-right small>
+        <ion-icon name="logo-facebook"></ion-icon>
+      </button>
+    </ion-col>
+  </ion-row>
 
 </ion-content>
