--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -1,18 +1,25 @@
-<!--
-  Generated template for the RegisterPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>register</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Register</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
+  <ion-item>
+    <ion-label>Email Address</ion-label>
+    <ion-input type="text" [(ngModel)]="user.email"></ion-input>
+  </ion-item>
+
+  <ion-item>
+    <ion-label>Password</ion-label>
+    <ion-input type="password" [(ngModel)]="user.password"></ion-input>
+  </ion-item>
+
+  <ion-row>
+    <ion-col text-center>
+      <button ion-button (click)="register()" small>Register</button>
+      <button ion-button color="danger" small>Cancel</button>
+    </ion-col>
+  </ion-row>
 
 </ion-content>
