--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -13,11 +13,11 @@
 </ion-header>
 
 <ion-content>
-  <ion-item *ngFor="let chat of list">
-    <ion-list>
-      <p>{{chat.text_data}}</p>
-    </ion-list>
-  </ion-item>
+  <ion-list >
+    <ion-item >
+      <p>{{room}}</p>
+    </ion-item>
+  </ion-list>
 </ion-content>
 
 <ion-footer ion-fixed>
