--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,6 +16,7 @@
         </ion-avatar>
         <h2>NAME: {{ user.username }}</h2>
         <p>Email Address: {{ user.email }}</p>
+        <p>Status: {{ user.status }}</p>
       </ion-item>
   </ion-list>
 </ion-content>
